@@ -1323,31 +1323,64 @@ void QwtSymbol::drawSymbols( QPainter *painter,
         }
         else if ( d_data->cache.policy == QwtSymbol::AutoCache )
         {
-            if ( painter->paintEngine()->type() == QPaintEngine::Raster )
+            switch( painter->paintEngine()->type() )
             {
-                useCache = true;
-            }
-            else
-            {
-                switch( d_data->style )
+                case QPaintEngine::OpenGL:
+#if QT_VERSION >= 0x040600
+                case QPaintEngine::OpenGL2:
+#endif
                 {
-                    case QwtSymbol::XCross:
-                    case QwtSymbol::HLine:
-                    case QwtSymbol::VLine:
-                    case QwtSymbol::Cross:
-                        break;
-
-                    case QwtSymbol::Pixmap:
+                    // using a FBO as cache ?
+                    useCache = false;
+                    break;
+                }
+#if QT_VERSION >= 0x040500
+                case QPaintEngine::OpenVG:
+#endif
+                case QPaintEngine::SVG:
+                case QPaintEngine::Pdf:
+                case QPaintEngine::Picture:
+                {
+                    // vector graphics
+                    useCache = false;
+                    break;
+                }
+                case QPaintEngine::X11:
+                {
+                    switch( d_data->style )
                     {
-                        if ( !d_data->size.isEmpty() &&
-                            d_data->size != d_data->pixmap.pixmap.size() ) 
+                        case QwtSymbol::XCross:
+                        case QwtSymbol::HLine:
+                        case QwtSymbol::VLine:
+                        case QwtSymbol::Cross:
                         {
-                            useCache = true;
+                            // for the very simple shapes using vector graphics is 
+                            // usually faster.
+
+                            useCache = false;
+                            break;
                         }
-                        break;
-                    }                       
-                    default:
-                        useCache = true;
+
+                        case QwtSymbol::Pixmap:
+                        {
+                            if ( d_data->size.isEmpty() ||
+                                d_data->size == d_data->pixmap.pixmap.size() ) 
+                            {
+                                // no need to have a pixmap cache for a pixmap
+                                // of the same size
+
+                                useCache = false;
+                            }
+                            break;
+                        }                       
+                        default:
+                            break;
+                    }
+                    break;
+                }
+                default:
+                {
+                    useCache = true;
                 }
             }
         }
